--- a/wercker.yml
+++ b/wercker.yml
@@ -11,6 +11,10 @@ build:
     - script:
         name: Show global envs
         code: env
+    - script:
+        name: Save start time
+        code: |
+          echo $WERCKER_MAIN_PIPELINE_STARTED > $WERCKER_OUTPUT_DIR/main_pipeline_started
 
 rspec-models:
   steps:
@@ -27,6 +31,9 @@ rspec-models:
     - script:
         name: Run RSpec
         code: bundle exec rspec spec/models
+    - script:
+        name: Show total time
+        code: script/calculate-total-time
 
 rspec-controllers:
   steps:
@@ -43,6 +50,9 @@ rspec-controllers:
     - script:
         name: Run RSpec
         code: bundle exec rspec spec/controllers
+    - script:
+        name: Show total time
+        code: script/calculate-total-time
 
 rspec-features:
   steps:
@@ -59,3 +69,6 @@ rspec-features:
     - script:
         name: Run RSpec
         code: bundle exec rspec spec/features
+    - script:
+        name: Show total time
+        code: script/calculate-total-time
