--- a/wercker.yml
+++ b/wercker.yml
@@ -11,6 +11,10 @@ build:
     - script:
         name: Show global envs
         code: env
+    - script:
+        name: Save start time
+        code: |
+          echo $WERCKER_MAIN_PIPELINE_STARTED > $WERCKER_OUTPUT_DIR/main_pipeline_started
 
 rspec-models:
   steps:
