--- a/wercker.yml
+++ b/wercker.yml
@@ -12,17 +12,23 @@ build:
         name: Show global envs
         code: env
     - script:
+        name: Show dir
+        code: |
+          ls -al $WERCKER_ROOT
+          echo "===================="
+          ls -al $WERCKER_OUTPUT_DIR
+    - script:
         name: Save start time
         code: |
-          ls -al $WERCKER_OUTPUT_DIR
           echo $WERCKER_MAIN_PIPELINE_STARTED > $WERCKER_OUTPUT_DIR/main_pipeline_started
-          ls -al $WERCKER_OUTPUT_DIR
 
 rspec-models:
   steps:
     - script:
-        name: Show output dir
+        name: Show dir
         code: |
+          ls -al $WERCKER_ROOT
+          echo "===================="
           ls -al $WERCKER_OUTPUT_DIR
     - script:
         name: Show global envs
@@ -31,6 +37,12 @@ rspec-models:
     - script:
         name: Set POSTGRES_USER
         code: export POSTGRES_USER=postgres
+    - script:
+        name: Show dir
+        code: |
+          ls -al $WERCKER_ROOT
+          echo "===================="
+          ls -al $WERCKER_OUTPUT_DIR
     - script:
         name: Prepare database
         code: bundle exec rake db:test:prepare
@@ -44,8 +56,10 @@ rspec-models:
 rspec-controllers:
   steps:
     - script:
-        name: Show output dir
+        name: Show dir
         code: |
+          ls -al $WERCKER_ROOT
+          echo "===================="
           ls -al $WERCKER_OUTPUT_DIR
     - script:
         name: Show global envs
@@ -67,8 +81,10 @@ rspec-controllers:
 rspec-features:
   steps:
     - script:
-        name: Show output dir
+        name: Show dir
         code: |
+          ls -al $WERCKER_ROOT
+          echo "===================="
           ls -al $WERCKER_OUTPUT_DIR
     - script:
         name: Show global envs
